# PlainSight

./: .gitignore  README.md  dashboard.py  pyproject.toml  server.py
backend/: app.py  db.py
cookie_analyzer/: main.py
cookie_analyzer/core/: engine.py  schemas.py
cookie_analyzer/rules/: consent_rules.py  cookie_rules.py  deception_rules.py  ui_rules.py
cookie_analyzer/summarizer/: gemini.py
cookie_analyzer/tests/: test_input.json  test_runner.py
extention/: background.js  manifest.json  server.py  sidepanel.css  sidepanel.html  sidepanel.js
policy/: input.json  output.json  req.txt
policy/src/: main.py  sample.py
policy/src/pipeline/: clean.py  openrouter_client.py  risk_labels.py  run_pipeline.py  score.py  section.py  signals.py  takeaways.py  types.py
